--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: '3.9' # install the python version needed
           
       - name: hiho
-      - run: |
+        run: |
           output=$(python test.py)
           echo "::set-output name=changelog::$output"
         id: step1
