--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
       - name: hiho
         run: |
           output=$(python test.py)
-          output="${content//'%'/'%25'}"
-          output="${content//$'\n'/'%0A'}"
-          output="${content//$'\r'/'%0D'}"
+          output="${output//'%'/'%25'}"
+          output="${output//$'\n'/'%0A'}"
+          output="${output//$'\r'/'%0D'}"
           echo "changelog=$output" >> $GITHUB_OUTPUT
         id: step1
         
