--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,7 @@ jobs:
         run: |
           output=$(python test.py)
           last_line=$(echo "$output" | grep -oE 'DONE - created issue CICDSSWA-[0-9]+')
-          echo $last_line
-          output="${output//'%'/'%25'}"
-          output="${output//$'\n'/'%0A'}"
-          output="${output//$'\r'/'%0D'}"
-          echo "changelog=$output" >> $GITHUB_OUTPUT
+          echo "changelog=$last_line" >> $GITHUB_OUTPUT
         id: step1
         
       - name: Print changelog
