--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,1 +1,20 @@
 
+name: run test.py
+
+on:
+  workflow_dispatch:
+    inputs:
+      test:
+        type: boolean
+        description: Include 🎉🤣 emojis
+        default: true
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    if: ${{inputs.test == 'true'}}
+    steps:
+
+      - name: checkout repo content
+        run: | 
+          echo ${{inputs.test}}
