--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,12 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout true
-        if: ${{ github.event.inputs.test == true }}
+        if: ${{ github.event.inputs.test == 'true' }}
         run: |
           echo ${{inputs.test}}
 
       - name: checkout refalset
-        if: ${{ github.event.inputs.test == false }}
+        if: ${{ github.event.inputs.test == 'false' }}
         run: |
           echo ${{inputs.test}}
       - name: lol
