--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,6 @@ jobs:
         
       - name: Print changelog
         run: echo "${{ steps.step1.outputs.changelog }}" >> $GITHUB_STEP_SUMMARY
+
+      - name: ansi test
+        run: echo "\e[43m Test \e[43m"
