--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Set Current 
         run: |
           echo "$TEST"
+          echo ${{now()}}
         
       - name: checkout repo content
         uses: actions/checkout@v2 # checkout the repository content to github runner
