--- a/.github/action/action.yml
+++ b/.github/action/action.yml
@@ -3,7 +3,10 @@ name: test
 inputs:
   test:
     description: abc
-    default: true
+    default: ${{ env.def }}
+
+env:
+  def: 'abc'
 
 runs:
   using: composite
