--- a/.github/action/action.yml
+++ b/.github/action/action.yml
@@ -3,7 +3,7 @@ name: test
 inputs:
   test:
     description: abc
-    default: ${{ env.def }}
+    default: '["abc", "eee"]'
 
 env:
   def: 'abc'
@@ -13,4 +13,4 @@ runs:
   steps:
     - name: echoooo
       shell: bash
-      run: echo ${{ inputs.test }}
+      run: echo ${{ fromJson(inputs.test) }}
