--- a/.github/action/action.yml
+++ b/.github/action/action.yml
@@ -17,6 +17,7 @@ runs:
       run: |
         t=${{ toJson(inputs.test) }}
         echo "${t[0]}"
+        echo $t
         for item in "${t[@]}"; do
           echo "$item"
         done
