--- a/.github/action/action.yml
+++ b/.github/action/action.yml
@@ -15,6 +15,7 @@ runs:
     - name: echoooo
       shell: bash
       run: |
+        echo "${{inputs.test}}" | jq '.'
         t=${{ fromJson(inputs.test) }}
         echo "${t[0]}"
         echo $t
