--- a/.github/action/action.yml
+++ b/.github/action/action.yml
@@ -15,11 +15,4 @@ runs:
     - name: echoooo
       shell: bash
       run: |
-        
-        t=${{ fromJson(inputs.test) }}
-        echo ${t} | jq -r '.'
-        echo "${t[0]}"
-        echo $t
-        for item in $t; do
-          echo "$item"
-        done
+        echo "${{inputs.test}}" | jq -r '.'
