--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: aaaaaa
         uses: knirpsfass/workflow-test-02/.github/action@main
+        with:
+          test: '["abc", "eee"]'
       - name: test custom thingy
         run: |
           echo "::debug:: test"
