--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         run: touch text.txt
         
       - name: Upload product dependencies Files
-        uses: actions/upload-artifact@v3
+        uses: actions/${{env.UPLOAD || 'upload-artifact'}}@v3
         if: success()
         with:
           name: ${{ (inputs.text && format('{0}-', inputs.text)) || ''}}text.txt
