--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,10 @@ name: lol
         description: Include 🎉🤣 emojis
         default: true
       text:
-        description: Include 🎉🤣 emojis
+      rsi_foundation_tag:
+        description: 'Enter tag from comp-RsiFoundation repo.
+
+          '
 
 jobs:
   build:
